force-app/main/default/objects/KimbleOne__GoodsReceiptAllocation__c/KimbleOne__GoodsReceiptAllocation__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Goods Receipt Allocation</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goods Receipt Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>