force-app/main/default/objects/KimbleOne__GoodsReceiptAllocation__c/fields/KimbleOne__GoodsReceivedNote__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__GoodsReceivedNote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goods Received Note</label>
    <referenceTo>KimbleOne__GoodsReceivedNote__c</referenceTo>
    <relationshipLabel>Goods Receipt Allocations</relationshipLabel>
    <relationshipName>GoodsReceiptAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>