force-app/main/default/objects/KimbleOne__GoodsReceiptAllocation__c/fields/KimbleOne__ReceivedUnits__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReceivedUnits__c</fullName>
    <label>Received Units</label>
    <precision>9</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>