force-app/main/default/objects/KimbleOne__GoodsReceiptAllocation__c/fields/KimbleOne__SupplierInvoice__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Invoice</label>
    <referenceTo>KimbleOne__SupplierInvoice__c</referenceTo>
    <relationshipLabel>Goods Receipt Allocations</relationshipLabel>
    <relationshipName>GoodsReceiptAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>