force-app/main/default/objects/KimbleOne__GoodsReceiptAllocation__c/fields/KimbleOne__SupplierRequisitionLine__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierRequisitionLine__c</fullName>
    <label>Supplier Requisition Line</label>
    <referenceTo>KimbleOne__SupplierRequisitionLine__c</referenceTo>
    <relationshipLabel>Goods Receipt Allocations</relationshipLabel>
    <relationshipName>GoodsReceiptAllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>