force-app/main/default/objects/KimbleOne__GoodsReceiptAllocation__c/fields/KimbleOne__TimeEntry__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeEntry__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Time Entry</label>
    <referenceTo>KimbleOne__TimeEntry__c</referenceTo>
    <relationshipLabel>Goods Receipt Allocations</relationshipLabel>
    <relationshipName>GoodsReceiptAllocations</relationshipName>
    <type>Lookup</type>
</CustomField>